# mcp-memory

./: .gitignore  Makefile  README.md  config.example.yaml  pyproject.toml  requirements.txt
scripts/: cache_smoke.py  intel_smoke.py  maint_now.py  search_smoke.py  seed.py  storage_smoke.py  test_vec.py
src/mcp_memory/: config.py  mcp_server.py  server.py
src/mcp_memory/background/: worker.py
src/mcp_memory/intelligence/: categorize.py  embeddings.py  keywords.py  utils.py
src/mcp_memory/obs/: metrics.py
src/mcp_memory/search/: hybrid_search.py  text_search.py  vector_search.py
src/mcp_memory/storage/: redis_cache.py  sqlite_manager.py
src/mcp_memory/tools/: forget_memory.py  memory_health.py  recall_memory.py  store_memory.py
