[project]
name = "mcp-memory"
version = "0.1.0"
description = "MCP memory server with SQLite+FTS5+sqlite-vec and Redis cache"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20",
  "pydantic>=2",
  "redis>=5",
  "sentence-transformers>=2.2.0",
  "sqlite-vec>=0.1.0",
  "pyyaml>=6",
  "structlog>=24.1.0",
  "uvicorn>=0.30.0",
  "fastapi>=0.112.0",
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[project.optional-dependencies]
dev = ["black>=24","ruff>=0.5","mypy>=1.10"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
